--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ora": "^8.1.1",
     "picocolors": "^1.1.1",
     "react-reconciler": "^0.33.0",
+    "zod-to-json-schema": "^3.24.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -58,10 +59,12 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.7",
     "@types/react-reconciler": "^0.32.3",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "zod": "^3.24.1"
   },
   "peerDependencies": {
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "zod": "^3.0.0"
   },
   "keywords": [
     "ai",
