--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/evmts/smithers.git"
+    "url": "git+https://github.com/evmts/smithers.git"
   },
   "homepage": "https://github.com/evmts/smithers#readme",
   "bugs": {
