chore: Improve package.json metadata for npm discoverability
- Enhance description to highlight key features (JSX, state management, TUI)
- Add comprehensive keywords for better npm search results:
  - Added: anthropic, orchestration, workflow, automation
  - Added: agentic, multi-agent, rag, framework

Better description and keywords improve discoverability on npm registry.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smithers",
   "version": "0.1.0",
-  "description": "React-based framework for composable AI agent prompts",
+  "description": "Build AI agents in React. Declarative JSX components for orchestrating Claude agents with state management, parallel execution, and TUI visualization.",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -75,7 +75,15 @@
     "jsx",
     "mdx",
     "llm",
-    "claude"
+    "claude",
+    "anthropic",
+    "orchestration",
+    "workflow",
+    "automation",
+    "agentic",
+    "multi-agent",
+    "rag",
+    "framework"
   ],
   "author": "William Cory",
   "license": "MIT"
