fix: Disable colors in CI test environment
Set NO_COLOR=1 in GitHub Actions CI workflow to prevent color codes
in CLI output during tests. This fixes 3 failing tests in CI that were
expecting plain text output but receiving ANSI-colored output:

- CLI > plan command > renders MDX file to XML
- CLI > plan command > renders TSX file to XML
- CLI > run command > --dry-run shows plan and exits

The picocolors library respects NO_COLOR env var per standard conventions.
Tests pass locally and should now pass in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Test
         run: bun test
+        env:
+          NO_COLOR: 1
 
       - name: Build
         run: bun run build
