--- a/packages/smithers/tsconfig.json
+++ b/packages/smithers/tsconfig.json
@@ -3,15 +3,9 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "declaration": true,
-    "declarationDir": "./dist",
     "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "types": ["@types/bun"],
-    "paths": {
-      "@evmts/smithers": ["./src/index.ts"]
-    }
+    "jsxImportSource": "@evmts/smithers/solid-js-jsx-runtime"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "evals"]
 }
