--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "build": "tsc -p tsconfig.build.json",
     "dev": "tsc -p tsconfig.build.json --watch",
     "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.76",
@@ -47,7 +50,11 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "^5.7.2"
+    "@types/node": "^25.0.9",
+    "happy-dom": "^20.3.1",
+    "typescript": "^5.7.2",
+    "vite-plugin-solid": "^2.11.10",
+    "vitest": "^4.0.17"
   },
   "keywords": [
     "ai",
