Implement Claude component with async onMount pattern
Core Features:
- Self-executing component (executes on mount, no external orchestrator)
- Fire-and-forget async IIFE pattern for async execution
- Status tracking: pending → running → complete/error
- Ralph context integration for task tracking
- Mock executor for testing (real SDK integration TODO)

Components Added:
- Claude.tsx: Main component with async onMount pattern
- Ralph.tsx: Context for task tracking
- root.ts: Root interface for mounting components
- jsx.d.ts: TypeScript definitions for custom JSX elements
- renderer.js: JavaScript version for vite-plugin-solid build-time imports

Configuration:
- Updated vitest.config.ts with vite-plugin-solid and alias resolution
- Added renderer export to package.json
- NODE_ENV=test for mock executor

Note: JSX tests deferred to Phase 2 (JSX configuration needs more work)
All core tests (31/31) passing

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "./debug": {
       "types": "./dist/debug/index.d.ts",
       "import": "./dist/debug/index.js"
+    },
+    "./renderer": {
+      "import": "./src/solid/renderer.js"
     }
   },
   "files": [
