Configure TypeScript for Solid.js JSX with custom elements
TypeScript Configuration:
- Updated tsconfig.json with proper lib (ES2020 + DOM)
- Excluded test files from build (rootDir issue fix)
- Added strict type checking flags
- Simplified build scripts (use tsconfig.json directly)

Type Definitions:
- Enhanced jsx.d.ts with all custom elements (claude, ralph, phase, etc.)
- Added key prop support to all elements (Ralph Wiggum loop)
- Created globals.d.ts for Node.js process global
- All elements have proper type definitions

Type Fixes:
- Fixed unused parameter errors (prefixed with _)
- Added type assertions for renderer (JSX.Element → SmithersNode)
- Removed unused imports
- Fixed process.env type errors

Documentation:
- TYPESCRIPT.md: Comprehensive guide with all gotchas
- examples/type-check-demo.tsx: Verification examples

Verification:
✅ bun run typecheck passes (no errors)
✅ bun run build succeeds
✅ dist/ contains .js and .d.ts files
✅ All tests passing (31/31)
✅ jsx.d.ts included in compilation
✅ No red squiggles on custom JSX elements

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "dev": "tsc -p tsconfig.build.json --watch",
+    "build": "tsc",
+    "dev": "tsc --watch",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist",
     "test": "vitest run",
