--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.76",
     "@anthropic-ai/sdk": "^0.71.2",
-    "solid-js": "^1.9.10"
+    "solid-js": "^1.9.10",
+    "zustand": "^5.0.10"
   },
   "peerDependencies": {
     "solid-js": "^1.9.10"
