--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "README.md"
   ],
   "scripts": {
+    "build": "echo 'No build needed - Bun runs TypeScript directly'",
     "typecheck": "tsc --noEmit",
     "test": "bun test",
     "test:watch": "bun test --watch"
