--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         run: bun run build
 
       - name: Test
-        run: bun -c bunfig.toml test
+        run: bun -c ./bunfig.toml test
