fix: Use solid-js/h for jsxImportSource

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -3,7 +3,10 @@
 # Usage: bun -c node_modules/smithers-orchestrator/bunfig.toml your-file.tsx
 
 jsx = "react-jsx"
-jsxImportSource = "solid-js"
+jsxImportSource = "solid-js/h"
 
 [install]
 auto = "fallback"
+
+[test]
+preload = ["./test/preload.ts"]
