fix: Use bun-plugin-solid for proper Solid JSX transform
- Add preload.ts with SolidPlugin for SSR mode
- Move babel deps to regular dependencies
- Update SKILL.md with preload configuration
- Fixes Solid context propagation issue

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,11 +1,11 @@
 # Bun configuration for Smithers
 # https://bun.sh/docs/runtime/bunfig
 
-jsx = "react-jsx"
-jsxImportSource = "smithers-orchestrator"
+# Use bun-plugin-solid for Solid JSX transform
+preload = ["./preload.ts"]
 
 [install]
 auto = "fallback"
 
 [test]
-preload = ["./test/preload.ts"]
+preload = ["./preload.ts", "./test/preload.ts"]
