--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smithers-orchestrator",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "Build AI agents with Solid.js - Declarative JSX for Claude orchestration",
   "type": "module",
   "main": "./src/index.ts",
@@ -36,6 +36,7 @@
     "skills",
     "templates",
     "bunfig.toml",
+    "preload.ts",
     "plugin.json",
     "README.md"
   ],
@@ -48,7 +49,11 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.76",
     "@anthropic-ai/sdk": "^0.71.2",
+    "@babel/core": "^7.28.6",
+    "@babel/preset-typescript": "^7.28.5",
+    "@dschz/bun-plugin-solid": "^1.0.4",
     "@electric-sql/pglite": "^0.3.15",
+    "babel-preset-solid": "^1.9.10",
     "commander": "^12.0.0",
     "solid-js": "^1.9.10",
     "zod": "^4.3.5"
