--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "./components/MCP": "./src/components/MCP/index.ts",
     "./db": "./src/db/index.ts",
     "./monitor": "./src/monitor/index.ts",
+    "./middleware": "./src/middleware/index.ts",
+    "./rate-limits": "./src/rate-limits/index.ts",
     "./tools": "./src/tools/index.ts",
     "./reactive-sqlite": "./src/reactive-sqlite/index.ts",
     "./hooks": "./src/hooks/index.ts",
