--- a/babel.config.json
+++ b/babel.config.json
@@ -2,7 +2,7 @@
   "plugins": [
     ["@babel/plugin-transform-react-jsx", {
       "runtime": "automatic",
-      "importSource": "smithers-orchestrator/jsx"
+      "importSource": "smithers-orchestrator"
     }]
   ]
 }
