--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "rootDir": "..",
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "include": [
     "./**/*",
