--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -14,6 +14,8 @@
   ],
   "exclude": [
     "../node_modules",
-    "../dist"
+    "../dist",
+    "../src/**/*.test.ts",
+    "../src/**/*.test.tsx"
   ]
 }
