Exclude test files from npm package (189KB vs 24MB)

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   },
   "files": [
     "src",
+    "!src/**/*.test.ts",
+    "!src/**/*.test.tsx",
+    "!src/.smithers",
     "bin",
     "skills",
     "templates",
