--- a/.npmignore
+++ b/.npmignore
@@ -1,29 +1,6 @@
-# Test artifacts
-src/.smithers/
+# Test files (must use explicit patterns for npm)
 **/*.test.ts
 **/*.test.tsx
-
-# Dev files
-.git/
-.github/
-.husky/
-.turbo/
-.worktrees/
-reference/
-docs/
-evals/
-examples/
-issues/
-reviews/
-scripts/
-test/
-prompts/
-*.md
-!README.md
-
-# Config
-.gitignore
-.gitmodules
-tsconfig*.json
-babel.config.json
-oxlint.json
+**/__tests__/
+**/test/
+src/.smithers/
