Fix JSX runtime production mode crash, model aliases, and add pragma to template

--- a/templates/main.tsx.template
+++ b/templates/main.tsx.template
@@ -1,4 +1,5 @@
 #!/usr/bin/env bun
+/** @jsxImportSource smithers-orchestrator */
 import { createSmithersRoot } from 'smithers-orchestrator'
 import { createSmithersDB } from 'smithers-orchestrator/db'
 import {
