Add build step - compile TSX to JS for npm package

--- a/package.json
+++ b/package.json
@@ -3,54 +3,43 @@
   "version": "0.2.3",
   "description": "Build AI agents with React - Declarative JSX for Claude orchestration",
   "type": "module",
-  "main": "./src/index.ts",
+  "main": "./dist/src/index.js",
   "bin": {
-    "smithers": "./bin/cli.ts"
+    "smithers": "./dist/bin/cli.js"
   },
   "exports": {
-    ".": "./src/index.ts",
-    "./jsx-runtime": "./src/reconciler/jsx-runtime.ts",
-    "./jsx-dev-runtime": "./src/reconciler/jsx-runtime.ts",
-    "./core": "./src/core/index.ts",
-    "./reconciler": "./src/reconciler/index.ts",
-    "./react": "./src/reconciler/index.ts",
-    "./components": "./src/components/index.ts",
-    "./components/Ralph": "./src/components/Ralph.tsx",
-    "./components/Review": "./src/components/Review.tsx",
-    "./components/Phase": "./src/components/Phase.tsx",
-    "./components/Step": "./src/components/Step.tsx",
-    "./components/Claude": "./src/components/Claude.tsx",
-    "./components/SmithersProvider": "./src/components/SmithersProvider.tsx",
-    "./components/Orchestration": "./src/components/Orchestration.tsx",
-    "./components/Smithers": "./src/components/Smithers.tsx",
-    "./components/JJ": "./src/components/JJ/index.ts",
-    "./components/Git": "./src/components/Git/index.ts",
-    "./components/Hooks": "./src/components/Hooks/index.ts",
-    "./components/MCP": "./src/components/MCP/index.ts",
-    "./middleware": "./src/middleware/index.ts",
-    "./db": "./src/db/index.ts",
-    "./monitor": "./src/monitor/index.ts",
-    "./rate-limits": "./src/rate-limits/index.ts",
-    "./tools": "./src/tools/index.ts",
-    "./reactive-sqlite": "./src/reactive-sqlite/index.ts",
-    "./hooks": "./src/hooks/index.ts",
-    "./hooks/ai-sdk": "./src/hooks/ai-sdk.ts"
+    ".": "./dist/src/index.js",
+    "./jsx-runtime": "./dist/src/reconciler/jsx-runtime.js",
+    "./jsx-dev-runtime": "./dist/src/reconciler/jsx-runtime.js",
+    "./core": "./dist/src/core/index.js",
+    "./reconciler": "./dist/src/reconciler/index.js",
+    "./react": "./dist/src/reconciler/index.js",
+    "./components": "./dist/src/components/index.js",
+    "./components/JJ": "./dist/src/components/JJ/index.js",
+    "./components/Git": "./dist/src/components/Git/index.js",
+    "./components/Hooks": "./dist/src/components/Hooks/index.js",
+    "./components/MCP": "./dist/src/components/MCP/index.js",
+    "./middleware": "./dist/src/middleware/index.js",
+    "./db": "./dist/src/db/index.js",
+    "./monitor": "./dist/src/monitor/index.js",
+    "./rate-limits": "./dist/src/rate-limits/index.js",
+    "./tools": "./dist/src/tools/index.js",
+    "./reactive-sqlite": "./dist/src/reactive-sqlite/index.js",
+    "./hooks": "./dist/src/hooks/index.js",
+    "./hooks/ai-sdk": "./dist/src/hooks/ai-sdk.js"
   },
   "files": [
-    "src",
-    "!src/**/*.test.ts",
-    "!src/**/*.test.tsx",
-    "!src/.smithers",
-    "bin",
+    "dist",
     "skills",
     "templates",
     "bunfig.toml",
-    "preload.ts",
     "plugin.json",
     "README.md"
   ],
   "scripts": {
-    "build": "echo 'No build needed - Bun runs TypeScript directly'",
+    "build": "bun build:lib && bun build:bin",
+    "build:lib": "bun build ./src/index.ts ./src/reconciler/jsx-runtime.ts ./src/core/index.ts ./src/reconciler/index.ts ./src/components/index.ts ./src/db/index.ts ./src/middleware/index.ts ./src/monitor/index.ts ./src/rate-limits/index.ts ./src/tools/index.ts ./src/reactive-sqlite/index.ts ./src/hooks/index.ts ./src/hooks/ai-sdk.ts ./src/components/JJ/index.ts ./src/components/Git/index.ts ./src/components/Hooks/index.ts ./src/components/MCP/index.ts --outdir dist --target bun --format esm --splitting",
+    "build:bin": "bun build ./bin/cli.ts --outdir dist/bin --target bun",
     "typecheck": "tsc --noEmit",
     "lint": "oxlint src/",
     "lint:fix": "oxlint --fix src/",
