--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smithers-orchestrator",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Build AI agents with React - Declarative JSX for Claude orchestration",
   "type": "module",
   "main": "./dist/src/index.js",
@@ -32,6 +32,7 @@
     "dist",
     "skills",
     "templates",
+    "preload.ts",
     "bunfig.toml",
     "plugin.json",
     "README.md"
