--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,7 +4,8 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./dist/src",
+    "rootDir": "./src",
     "composite": false
   },
   "include": ["src/**/*"],
