--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ dist/
 bun.lockb
 .worktrees/
 PROMPT.md
+State.md
+codebase-export.md
+src_for_llm.md
 src/.smithers/
 .smithers/
 tapes/_vhs_smithers/
