Implement custom tool execute handlers for legacy tools
- Add legacy-tool-ipc.ts for file-based IPC between MCP server and parent
- Add legacy-tool-server.ts to create MCP server config for legacy tools
- Add legacy-mcp-server.ts as MCP server that routes calls via IPC
- Add comprehensive tests for both modules (11 tests passing)
- Export new modules from src/tools/index.ts
- Close doc-gap-claude-custom-tools issue

Note: Pre-existing test failures in smithers-mcp-server.test.ts not addressed

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -6,6 +6,11 @@
 jsx = "react-jsx"
 jsxImportSource = "react"
 
+# SuperSmithers preload plugin for import attribute transformation
+# Transforms: import X from "./path" with { supersmithers: "scope" }
+# Into branded proxy components
+preload = ["./src/supersmithers/register.ts"]
+
 [install]
 auto = "fallback"
 
