--- a/smithers_py/pyproject.toml
+++ b/smithers_py/pyproject.toml
@@ -4,25 +4,52 @@ build-backend = "hatchling.build"
 
 [project]
 name = "smithers-py"
-version = "0.1.0"
+version = "1.0.0"
 description = "Python implementation of Smithers multi-agent orchestration framework"
 readme = "README.md"
 requires-python = ">=3.9"
+license = { text = "MIT" }
+authors = [
+    { name = "William Cory", email = "willcory10@gmail.com" }
+]
+keywords = ["ai", "agents", "orchestration", "pydantic", "claude", "llm"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "pydantic>=2.0",
-    "aiosqlite",
-    "anthropic",
+    "pydantic-ai>=0.1.0",
+    "aiosqlite>=0.20.0",
 ]
 
 [project.optional-dependencies]
-jsx = ["pyjsx"]
+jsx = ["python-jsx"]
 dev = [
-    "pytest",
-    "pytest-asyncio",
+    "pytest>=8.0",
+    "pytest-asyncio>=1.0",
 ]
+all = ["smithers-py[jsx,dev]"]
 
 [project.scripts]
 smithers-py = "smithers_py.__main__:main"
 
+[project.urls]
+Homepage = "https://github.com/evmts/smithers"
+Documentation = "https://github.com/evmts/smithers/tree/main/smithers_py"
+Repository = "https://github.com/evmts/smithers.git"
+
 [tool.hatch.build.targets.wheel]
 packages = ["smithers_py"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+testpaths = ["."]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
