Implement Phase 2 God-TUI Rendering Engine
- width.zig: visibleWidth() with grapheme segmentation, East Asian Width,
  emoji detection, LRU cache (512 entries), ANSI stripping, sliceByColumn(),
  wrapTextWithAnsi() with style tracking
- renderer.zig: RendererState struct, differential rendering (doRender),
  DEC 2026 sync mode, cursor position extraction, overlay compositing,
  LINE_RESET application, incremental vs full render detection
- test.zig: Module test file

31 tests total (14 width + 17 renderer)

--- a/smithers_py/requirements.txt
+++ b/smithers_py/requirements.txt
@@ -1,4 +1,8 @@
+# DEPRECATED: Use `uv sync` instead of `pip install -r requirements.txt`
+# See pyproject.toml for dependencies
+#
+# For legacy pip users:
 pydantic>=2.0
-aiosqlite
-anthropic
+pydantic-ai>=0.1.0
+aiosqlite>=0.20.0
 pyjsx  # optional, for JSX transpilation
