--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smithers-orchestrator",
   "version": "0.2.13",
   "description": "Build AI agents with React - Declarative JSX for Claude orchestration",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/src/index.js",
   "bin": {
