--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,6 +71,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ inputs.tag }}
           name: v${{ steps.version.outputs.version }}
           body: |
             ## Smithers v${{ steps.version.outputs.version }}
