🐛 fix(exports): add /components and /hooks subpath exports
Enables imports like:
- import { SmithersProvider, Ralph, Claude } from 'smithers-orchestrator/components'
- import { useClaude, useAmp } from 'smithers-orchestrator/hooks'

Closes #47
Closes #50

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     ".": "./dist/src/index.js",
     "./jsx-runtime": "./dist/src/reconciler/jsx-runtime.js",
     "./jsx-dev-runtime": "./dist/src/reconciler/jsx-runtime.js",
+    "./components": "./dist/src/components/index.js",
     "./db": "./dist/src/db/index.js",
+    "./hooks": "./dist/src/hooks/index.js",
     "./supersmithers": "./dist/src/supersmithers/index.js",
     "./supersmithers/runtime": "./dist/src/supersmithers/runtime.js",
     "./supersmithers/register": "./dist/src/supersmithers/register.js"
